[package]
name = "rust_web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num_enum = "*"
route_macro_attribute = { path = "route-macro-attribute"}
futures = "0.3"
async-std = "1.12.0"
flate2 = "*"
openssl = { version = "0.10.64" }
rand = "*"
